# rust_parse_html

./: Cargo.toml  README.md
crates/css_parser/: Cargo.toml
crates/css_parser/src/: lib.rs
crates/css_parser/tests/: test.rs
crates/css_parser/tests/snapshots/: test__test2.snap
crates/html_parser/: Cargo.toml
crates/html_parser/src/: dom.rs  lib.rs
crates/html_parser/tests/: test.rs
crates/html_parser/tests/snapshots/: test__attribute.snap  test__attribute.snap.new  test__it_works.snap  test__it_works.snap.new
crates/layout/: Cargo.toml
crates/layout/src/: lib.rs
crates/main/: Cargo.toml
crates/main/src/: main.rs  paint.rs
crates/main/src/snapshots/: main__test2.snap  main__test3.snap.new
