[package]
edition = "2018"
name = "main"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
css_parser = {path = "../css_parser"}
html_parser = {path = "../html_parser"}
image = "0.14"
layout = {path = "../layout"}
style = {path = "../style"}


[dev-dependencies]
insta = "1.12.0"
